# homework27

./: .gitignore  README.md  pyproject.toml
ads/: models.py  views.py
ads/migrations/: 0001_initial.py
datasets/: ads.csv
fixtures/: ads.json  categories.json
homework27/: asgi.py  settings.py  urls.py  wsgi.py
utils/: utils.py
