[tool.poetry]
name = "homework27"
version = "0.1.0"
description = ""
authors = ["puzynjailya <puzynjailya@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.6"
jsonschema = "^4.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
